Wed Jan 17 01:48:03 UTC 2007 / Charles Lepple <clepple@gmail.com>

 * configure.in: generate packaging/RedHat/nut.spec from nut.spec.in

Mon Jan 15 20:32:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.c: disable previous patch for upsclient (something is
   broken somehow, but I don't have the time now to check it out)


Mon Jan 15 20:20:36 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>
 * drivers/upscode2.[ch]:
   - major rework to support the new 3-phase variable set
     In cooperation with Niklas Edmundsson <nikke@acc.umu.se>

Mon Jan 15 20:02:21 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 * packaging/RedHat/nut-spec:
   - update to current fileset
   - add nut-snmp sub-package
 * packaging/RedHat/nut.spec.in
   removed as it is generated from nut.spec.in

Mon Jan 15 19:54:30 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.ch, clients/upsmon.c, server/upsd.c:
   - allow forcing IPv4 or IPv6 mode from the command line (may be useful when
     hosts are specified through a fully.qualified.domain.name which resolves
     into both IPv4 and IPv6 addresses)
 * server/access.c:
   - fix typo in IPv4 acl_add()
   - return ACL that can't be parsed

Mon Jan 15 19:54:12 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 * clients/upsstats.c:
   - remove bogus test that makes upsstats.cgi fail unpredictbaly

Mon Jan 15 19:27:27 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * server/access.c:
   - add range checks for CIDR notation
   - when an ACL can't be parsed, abort rather than ignoring it silently
   - store addresses and masks in network byte order, so these don't have to
     be reordered each time when checking access
   - don't require IPv6 addresses to be enclosed in [square brackets] (which
     is confusing, since we don't require this for IPv4 addresses either)

Mon Jan 15 03:59:07 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>
