@@ -1,3 +1,7 @@
+Wed Jan 17 03:45:53 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>
+
+ * Makefile.am: added "make distcheck-light" target
+
 Wed Jan 17 01:48:03 UTC 2007 / Charles Lepple <clepple@gmail.com>
 
  * configure.in: generate packaging/RedHat/nut.spec from nut.spec.in
